// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multistep Allows step advancment when current step is invalid but allowIncomplete is true 1`] = `
"<div class=\\"formkit-outer\\" id=\\"input_30\\" data-family=\\"multi-step\\" data-type=\\"multi-step\\">
  <div class=\\"formkit-wrapper\\" data-tab-style=\\"progress\\" data-hide-labels=\\"true\\">
    <div class=\\"formkit-tabs\\" role=\\"tablist\\"><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"false\\" data-visited=\\"true\\" role=\\"tab\\" id=\\"input_30_tab_0\\" aria-selected=\\"false\\" aria-controls=\\"input_31\\" tabindex=\\"-1\\" style=\\"\\">
        <!----><span class=\\"formkit-badge\\" role=\\"presentation\\">1</span>
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"true\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_30_tab_1\\" aria-selected=\\"true\\" aria-controls=\\"input_33\\" tabindex=\\"0\\" style=\\"\\" data-visited=\\"true\\">
        <!---->
        <!----><span class=\\"formkit-badge\\" role=\\"presentation\\"><!----></span>
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_30_tab_2\\" aria-selected=\\"false\\" aria-controls=\\"input_34\\" tabindex=\\"-1\\" style=\\"\\">
        <!---->
        <!---->
        <!---->
      </button></div>
    <div class=\\"formkit-steps\\">
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_31\\" role=\\"tabpanel\\" aria-labelledby=\\"input_30_tab_0\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <div class=\\"formkit-outer\\" data-family=\\"text\\" data-type=\\"text\\" data-invalid=\\"true\\" data-submitted=\\"true\\">
            <div class=\\"formkit-wrapper\\">
              <!---->
              <div class=\\"formkit-inner\\">
                <!---->
                <!----><input class=\\"formkit-input\\" type=\\"text\\" name=\\"text_20\\" id=\\"input_32\\" aria-describedby=\\"input_32-rule_required\\">
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <ul class=\\"formkit-messages\\">
              <li class=\\"formkit-message\\" id=\\"input_32-rule_required\\" data-message-type=\\"validation\\">Text_20 is required.</li>
            </ul>
          </div>
        </div>
        <div class=\\"formkit-step-actions\\">
          <!---->
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_21\\" id=\\"input_35\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_33\\" role=\\"tabpanel\\" aria-labelledby=\\"input_30_tab_1\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_23\\" id=\\"input_37\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_22\\" id=\\"input_36\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_34\\" role=\\"tabpanel\\" aria-labelledby=\\"input_30_tab_2\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_24\\" id=\\"input_38\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`multistep Does not allow step advancment when current step is invalid 1`] = `
"<div class=\\"formkit-outer\\" id=\\"input_21\\" data-family=\\"multi-step\\" data-type=\\"multi-step\\">
  <div class=\\"formkit-wrapper\\" data-tab-style=\\"tab\\" data-hide-labels=\\"false\\">
    <div class=\\"formkit-tabs\\" role=\\"tablist\\"><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"true\\" data-valid=\\"false\\" data-visited=\\"true\\" role=\\"tab\\" id=\\"input_21_tab_0\\" aria-selected=\\"true\\" aria-controls=\\"input_22\\" tabindex=\\"0\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step One</span><span class=\\"formkit-badge\\" role=\\"presentation\\">1</span>
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_21_tab_1\\" aria-selected=\\"false\\" aria-controls=\\"input_24\\" tabindex=\\"-1\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step Two</span>
        <!---->
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_21_tab_2\\" aria-selected=\\"false\\" aria-controls=\\"input_25\\" tabindex=\\"-1\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step Three</span>
        <!---->
        <!---->
      </button></div>
    <div class=\\"formkit-steps\\">
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_22\\" role=\\"tabpanel\\" aria-labelledby=\\"input_21_tab_0\\">
        <div class=\\"formkit-step-inner\\">
          <div class=\\"formkit-outer\\" data-family=\\"text\\" data-type=\\"text\\" data-invalid=\\"true\\" data-submitted=\\"true\\">
            <div class=\\"formkit-wrapper\\">
              <!---->
              <div class=\\"formkit-inner\\">
                <!---->
                <!----><input class=\\"formkit-input\\" type=\\"text\\" name=\\"text_14\\" id=\\"input_23\\" aria-describedby=\\"input_23-rule_required\\">
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <ul class=\\"formkit-messages\\">
              <li class=\\"formkit-message\\" id=\\"input_23-rule_required\\" data-message-type=\\"validation\\">Text_14 is required.</li>
            </ul>
          </div>
        </div>
        <div class=\\"formkit-step-actions\\">
          <!---->
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_15\\" id=\\"input_26\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_24\\" role=\\"tabpanel\\" aria-labelledby=\\"input_21_tab_1\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_17\\" id=\\"input_28\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_16\\" id=\\"input_27\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_25\\" role=\\"tabpanel\\" aria-labelledby=\\"input_21_tab_2\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_18\\" id=\\"input_29\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;
